--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #0d1117;
-    color: #ffffff;
+    background-color: #f0f0f0;
+    color: #000000;
     line-height: 1.6;
 }
 
