--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ nav {
 }
 
 nav a {
-    color: white;
+    color: #cccccc;
     margin: 0 15px;
     text-decoration: none;
     font-weight: bold;
